--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-echo "Hello World"
+<html>
+<head>
+<title>generic_website</title>
+</head>
+
+<body>
+<h1> heading_1 </h1>
+<p> 404_user_data_not_found </p>
+</body>
+
+</html>
+
+
