--- a/index.html
+++ b/index.html
@@ -1,10 +1,211 @@
-<html>
-	<head>
-		<title>Energiseds GitHub</title>
-	</head>
-	
-	<body>
-		<p> Coming Soon </p>
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Untitled Document</title>
+<style type="text/css">
+body {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 14px;
+	color: #000;
+}
+#apDiv1 {
+	position: absolute;
+	width: 231px;
+	height: 71px;
+	z-index: 1;
+	left: 32px;
+	top: 23px;
+}
+#apDiv2 {
+	position: absolute;
+	width: 41px;
+	height: 39px;
+	z-index: 1;
+	left: 222px;
+	top: 36px;
+}
+#apDiv3 {
+	position: absolute;
+	width: 39px;
+	height: 33px;
+	z-index: 2;
+	left: 108px;
+	top: 36px;
+}
+#apDiv4 {
+	position: absolute;
+	width: 34px;
+	height: 32px;
+	z-index: 3;
+	left: 55px;
+	top: 36px;
+}
+#apDiv5 {
+	position: absolute;
+	width: 44px;
+	height: 76px;
+	z-index: 4;
+	left: 211px;
+	top: 37px;
+}
+#apDiv6 {
+	position: absolute;
+	width: 200px;
+	height: 115px;
+	z-index: 1;
+	left: 53px;
+	top: 33px;
+}
+#apDiv7 {
+	position: absolute;
+	width: 284px;
+	height: 47px;
+	z-index: 2;
+	left: 16px;
+	top: 225px;
+}
+#apDiv8 {
+	position: absolute;
+	width: 53px;
+	height: 43px;
+	z-index: 3;
+	left: 148px;
+	top: 58px;
+}
+#apDiv {
+	position: absolute;
+	width: 51px;
+	height: 51px;
+	z-index: 3;
+	left: 106px;
+	top: 308px;
+}
+#apDiv9 {	position: absolute;
+	width: 78px;
+	height: 65px;
+	z-index: 3;
+	left: 26px;
+	top: 34px;
+}
+#apDiv10 {	position: absolute;
+	width: 42px;
+	height: 38px;
+	z-index: 3;
+	left: 226px;
+	top: 33px;
+}
+#apDiv11 {	position: absolute;
+	width: 42px;
+	height: 39px;
+	z-index: 3;
+	left: 178px;
+	top: 34px;
+}
+#apDiv12 {	position: absolute;
+	width: 42px;
+	height: 39px;
+	z-index: 3;
+	left: 178px;
+	top: 34px;
+}
+#apDiv13 {
+	position: absolute;
+	width: 203px;
+	height: 192px;
+	z-index: 3;
+	left: 54px;
+	top: 20px;
+}
+#apDiv14 {
+	position: absolute;
+	width: 45px;
+	height: 46px;
+	z-index: 4;
+	left: 44px;
+	top: 309px;
+}
+#apDiv15 {	position: absolute;
+	width: 70px;
+	height: 63px;
+	z-index: 4;
+	left: 35px;
+	top: 300px;
+}
+#apDiv16 {
+	position: absolute;
+	width: 55px;
+	height: 51px;
+	z-index: 5;
+	left: 169px;
+	top: 307px;
+}
+#apDiv17 {
+	position: absolute;
+	width: 52px;
+	height: 50px;
+	z-index: 6;
+	left: 231px;
+	top: 307px;
+}
+#apDiv18 {
+	position: absolute;
+	width: 584px;
+	height: 115px;
+	z-index: 7;
+	left: 412px;
+	top: 27px;
+}
+#apDiv19 {
+	position: absolute;
+	width: 531px;
+	height: 115px;
+	z-index: 8;
+	left: 436px;
+	top: 279px;
+}
+p {text-align:center}
+#apDiv20 {
+	position: absolute;
+	width: 156px;
+	height: 20px;
+	z-index: 9;
+	left: 71px;
+	top: 395px;
+	font-size: 10px;
+}
+#apDiv21 {
+	position: absolute;
+	width: 449px;
+	height: 70px;
+	z-index: 10;
+	left: 354px;
+	top: -35px;
+}
+</style>
+</head>
 
+<body>
+<div id="apDiv7">
+  <div id="apDiv21"><img src="images/page-break.jpg" width="660" height="79" /></div>
+  <p> <strong>Energised</strong> ~ Dev, Musician, Procrastinator </p>
+</div>
+<div id="apDiv13"><img src="images/head - 1.png" width="204" height="192" /></div>
+<div id="apDiv14"><a href="mailto:woolsey64@gmail.com"><img src="images/gmail.png" width="30" height="30" /></a></div>
+<div id="apDiv16"><a href="facebook.com/daniel.s.woolsey"><img src="images/facebook_icon.gif" width="30" height="30" /></a></div>
+<div id="apDiv"><a href="github.com/Energised"><img src="images/github.png" width="30" height="30" /></a></div>
+<div id="apDiv17"><a href="soundcloud.com/daniel-woolsey"><img src="images/soundcloud_icon.jpg" width="30" height="30" /></a></div>
+<div id="apDiv18">
+  <p>&ldquo;When life gives you lemons, don&rsquo;t make lemonade. Make life take the   lemons back! Get mad! I don&rsquo;t want your damn lemons, what the hell am I   supposed to do with these? Demand to see life&rsquo;s manager! Make life rue   the day it thought it could give Cave Johnson lemons! Do you know who I   am? I&rsquo;m the man who&rsquo;s gonna burn your house down! With the lemons! I&rsquo;m   gonna get my engineers to invent a combustible lemon that burns your   house down!&rdquo;</p>
+  <p><i> Cave Johnson, President of the Aperture Corperation</i></p>
+</div>
+<div id="apDiv19">
+  <p><strong>BIO</strong></p>
+  <p>Programming capabilities in Python, Ruby, HTML, CSS and VB</p>
+  <p>Somewhat reasonable understanding of Linux, Dreamweaver, Reason and Ableton</p>
+  <p>-----------------------------------------------------------------------------------------------------</p>
+  <p>As a procrastinating dev, I decided to work on something for once. Hence, this. One day I might actually just use Ghost or Jekyll but for now it's fun to actually build something original</p>
+</div>
+<div id="apDiv20">Copyright Dan Woolsey, 2014</div>
+</body>
 </html>
