--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@ p {text-align:center}
 </div>
 <div id="apDiv13"><img src="images/head - 1.png" width="204" height="192" /></div>
 <div id="apDiv14"><a href="mailto:woolsey64@gmail.com"><img src="images/gmail.png" width="30" height="30" /></a></div>
-<div id="apDiv16"><a href="facebook.com/daniel.s.woolsey"><img src="images/facebook_icon.gif" width="30" height="30" /></a></div>
-<div id="apDiv"><a href="github.com/Energised"><img src="images/github.png" width="30" height="30" /></a></div>
-<div id="apDiv17"><a href="soundcloud.com/daniel-woolsey"><img src="images/soundcloud_icon.jpg" width="30" height="30" /></a></div>
+<div id="apDiv16"><a href="http://www.facebook.com/daniel.s.woolsey"><img src="images/facebook_icon.gif" width="30" height="30" /></a></div>
+<div id="apDiv"><a href="http://www.github.com/Energised"><img src="images/github.png" width="30" height="30" /></a></div>
+<div id="apDiv17"><a href="http://www.soundcloud.com/daniel-woolsey"><img src="images/soundcloud_icon.jpg" width="30" height="30" /></a></div>
 <div id="apDiv18">
   <p>&ldquo;When life gives you lemons, don&rsquo;t make lemonade. Make life take the   lemons back! Get mad! I don&rsquo;t want your damn lemons, what the hell am I   supposed to do with these? Demand to see life&rsquo;s manager! Make life rue   the day it thought it could give Cave Johnson lemons! Do you know who I   am? I&rsquo;m the man who&rsquo;s gonna burn your house down! With the lemons! I&rsquo;m   gonna get my engineers to invent a combustible lemon that burns your   house down!&rdquo;</p>
   <p><i> Cave Johnson, President of the Aperture Corperation</i></p>
