--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<link href="favicon.ico" rel="icon" type="image/x-icon" />
 <style type="text/css">
 body {
 	font-family: Georgia, "Times New Roman", Times, serif;
